
Format strings:
---------------
Work has begun on replacing the %@-type formatting strings in descriptions.plist
with ones that work the same as format strings used in scripts. In most cases,
a placeholder like %@ or %d has been replaced with one like [destination] or
[population].
* @-credits -> credits-format
* oxp-containing-messages-list-@ -> oxp-containing-messages-list
* witch-to-@-in-f-seconds -> witch-to-x-in-y-seconds
* witch-galactic-in-f-seconds -> witch-galactic-in-x-seconds
* station-docking-clearance-abort-cancelled-in-f -> station-docking-clearance-abort-cancelled-in-time
* status-hyperspace-system-multi-@-@ -> status-hyperspace-system-multi
* equipment-plural-d-@ -> equipment-plural
* equipment-plural-d-d-@ -> equipment-plural-some-na
* manifest-cargo-quantity-format -> manifest-cargo-quantity
* manifest-cargo-quantity-format2 -> manifest-cargo-quantity-extended
* charts-distance-f -> charts-distance
* charts-est-travel-time-f -> charts-est-travel-time
* short-range-chart-distance-f -> short-range-chart-distance
* short-range-chart-est-travel-time-f -> short-range-chart-est-travel-time
* long-range-chart-distance-f -> long-range-chart-distance
* long-range-chart-est-travel-time-f -> long-range-chart-est-travel-time
* @-commodity-market -> system-commodity-market
* @-station-commodity-market -> station-commodity-market
* cash-@-load-d-of-d -> market-cash-and-load
* sysdata-planet-name-@ -> sysdata-data-on-system
* sysdata-prod-worth -> sysdata-prod-value
* gameoptions-voice-@ -> gameoptions-voice-name
* gameoptions-music-mode-@ -> gameoptions-music-mode
* gameoptions-fullscreen-mode-d-by-d-at-g-hz -> gameoptions-fullscreen-with-refresh-rate
* gameoptions-fullscreen-mode-d-by-d -> gameoptions-fullscreen
* equip-cash-@ -> equip-cash-value
* @-equip-cash-value -> equip-cash-value
* shipyard-price -> shipyard-price-label
* shipyard-cargo -> shipyard-cargo-label
* shipyard-cargo-d-tc -> shipyard-cargo-value
* shipyard-speed -> shipyard-speed-label